--- a/BtcMarkets/BtcMarkets.Wallet.Android/BtcMarkets.Wallet.Android.csproj
+++ b/BtcMarkets/BtcMarkets.Wallet.Android/BtcMarkets.Wallet.Android.csproj
@@ -27,7 +27,7 @@
     <DebugType>portable</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
+    <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
@@ -61,14 +61,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>1.14.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>1.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="OxyPlot.Xamarin.Forms">
-      <Version>1.1.0-unstable0011</Version>
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
@@ -81,6 +81,12 @@
     </PackageReference>
     <PackageReference Include="SkiaSharp.Views">
       <Version>1.68.0</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfChart">
+      <Version>17.1.0.42</Version>
+    </PackageReference>
+    <PackageReference Include="Toasts.Forms.Plugin">
+      <Version>3.3.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />
     <PackageReference Include="Xamarin.Android.Support.ViewPager" Version="28.0.0.1" />
@@ -103,7 +109,8 @@
     <Compile Include="Renderers\FaultTolerantPullToRefreshRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\LodingPageServiceDroid.cs" />
+    <Compile Include="Services\MessagerAlertAndroid.cs" />
+    <Compile Include="Services\PlatformService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\materialdesign.ttf" />
@@ -144,6 +151,9 @@
       <Project>{98481410-E3C1-4BFF-AB57-0F6CC07D045D}</Project>
       <Name>BtcMarkets.Wallet</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\apexcharts.js" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
