--- a/BtcMarkets/BtcMarkets.Core/BtcMarkets.Core.csproj
+++ b/BtcMarkets/BtcMarkets.Core/BtcMarkets.Core.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="PureWebSockets" Version="2.4.3" />
     <PackageReference Include="Refit" Version="4.6.48" />
     <PackageReference Include="SuperSocket.ClientEngine.Core" Version="0.10.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
