--- a/BtcMarkets/BtcMarkets.Wallet/BtcMarkets.Wallet.csproj
+++ b/BtcMarkets/BtcMarkets.Wallet/BtcMarkets.Wallet.csproj
@@ -61,6 +61,9 @@
     <Compile Update="Themes\LightTheme.xaml.cs">
       <DependentUpon>LightTheme.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\AccountBalancesPage.xaml.cs">
+      <DependentUpon>AccountBalancesPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\AccountPage.xaml.cs">
       <DependentUpon>AccountPage.xaml</DependentUpon>
     </Compile>
@@ -83,8 +86,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\AccountBalancesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AccountHoldingsView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MarketsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MarketTradesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
