--- a/BtcMarkets/BtcMarkets.Wallet.iOS/BtcMarkets.Wallet.iOS.csproj
+++ b/BtcMarkets/BtcMarkets.Wallet.iOS/BtcMarkets.Wallet.iOS.csproj
@@ -175,6 +175,12 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="ZXing.Net.Mobile.Forms">
+      <Version>2.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="Xamarin.Swift4.targets" />
