--- a/BtcMarkets/BtcMarkets.Wallet/BtcMarkets.Wallet.csproj
+++ b/BtcMarkets/BtcMarkets.Wallet/BtcMarkets.Wallet.csproj
@@ -45,7 +45,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="17.1.0.42" />
     <PackageReference Include="Toasts.Forms.Plugin" Version="3.3.2" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />  
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.346134-pre9" />  
+    <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />  
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
