--- a/BtcMarkets/BtcMarkets.Wallet.iOS/BtcMarkets.Wallet.iOS.csproj
+++ b/BtcMarkets/BtcMarkets.Wallet.iOS/BtcMarkets.Wallet.iOS.csproj
@@ -149,6 +149,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.0.4</Version>
     </PackageReference>
+    <PackageReference Include="Microcharts">
+      <Version>0.8.5-pre</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>1.14.0</Version>
     </PackageReference>
