--- a/BtcMarkets/BtcMarkets.Wallet/BtcMarkets.Wallet.csproj
+++ b/BtcMarkets/BtcMarkets.Wallet/BtcMarkets.Wallet.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
+    <PackageReference Include="Microcharts.Forms" Version="0.8.5-pre" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.14.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.14.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
